fix nav bar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,14 +169,15 @@ nav ul li a:active {
     border-radius: 5px;
     background: white;
     min-height: 300px;
+    height: 100%;
     width: 90%;
     top: 100px;
     -webkit-transform: translateX(120%);
             transform: translateX(120%);
-    -webkit-transition: -webkit-transform .6s ease-in;
-    transition: -webkit-transform .6s ease-in;
-    transition: transform .6s ease-in;
-    transition: transform .6s ease-in, -webkit-transform .6s ease-in;
+    -webkit-transition: -webkit-transform 0.6s ease-in;
+    transition: -webkit-transform 0.6s ease-in;
+    transition: transform 0.6s ease-in;
+    transition: transform 0.6s ease-in, -webkit-transform 0.6s ease-in;
   }
   nav .nav-active {
     -webkit-transform: translateX(0);
@@ -184,8 +185,8 @@ nav ul li a:active {
   }
   nav .hamburger {
     display: block;
-    -webkit-transition: .6s ease-in;
-    transition: .6s ease-in;
+    -webkit-transition: 0.6s ease-in;
+    transition: 0.6s ease-in;
   }
 }
 
@@ -418,7 +419,7 @@ main .services-item-container .services-item {
 }
 
 .articles .article-caption {
-  padding: .5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
 }
 
 .articles .article-caption h6 {
